--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Modelos de inteligência artifical e machine learning v3.pptx
 ~$Modelos de inteligência artifical e machine learning v3.pptx
+trabalho-final.rar
